Fixed navbar wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -18,27 +18,6 @@ code {
     monospace;
 }
 
-/* navbar */
-.navbar{
-  background-color: var(--tertiary);
-  text-align: center;
-  height: 40px;
-  justify-content: center;
-  overflow: auto;
-}
-
-.navbar a {
-  color: var(--secondary);
-  vertical-align: middle;
-  display: inline-block;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.navbar a.active {
-  background-color: var(--primary);
-}
 /* home */
 .content {
   margin-left: auto;
